Thu Sep 12 11:02:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSObject.m ([+_becomeMultiThreaded:]): Fixed typo - this
	method was declared to take a 'NSNotification' rather than a
	'NSNotification *' argument.

2002-09-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Double locking check fix
	* Source/NSFileManager.m: Double locking check fix
	Fixes contributed by David Ayers <d.ayers@inode.at>

2002-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSIArray.h: Minor optimisation
	* Headers/gnustep/unicode/gsm0338.h: Correct unicode to gsm table
	* Source/Unicode.m: Correct gsm conversion and optimise unicode to
	8-bit charaacter conversion for other character sets. Also correct
	lossy/non-lossy conversion using iconv.

2002-08-30  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.0

2002-08-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Implemented new MacOS-X methods -
	([-stringByPaddingToLength:withString:startingAtIndex:]), and
	([-stringByTrimmingCharactersInSet:])
	Tidied a couple of extension method names for consistency and
	documented several methods.

2002-08-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Get libxml to put filename in error
	messages when it is available.

2002-08-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Rewritten the way that iconv is used to decide
	upon the available encodings ... lazy evaluation so that we don't
	try to lookup an encoding until we have to.  This should improve
	process startup time (especially in gdb) since the iconv operations
	seem to be very slow.

2002-08-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Integrated GSXPath code by Nicola Pero
	provides an API to use the xpath support built into libxml from
	version 2.3 onwards.
	* Source/NSThread.m: Implement new priority methods.
	* Source/NSObject.m: Raise exception when passed null selector.
